--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <p>GitHub Repository: <a href="https://github.com/YOUR_GITHUB/HACL-2025" target="_blank">[View Code]</a></p>
 
         <h2>📢 Contact</h2>
-        <p>For questions, reach out to <a href="mailto:istasvarushil@gmail.com">Your Email</a> or <a href="https://github.com/prakharmishra27">GitHub Profile</a></p>
+        <p>For questions, reach out to <a href="mailto:istasvarushil@gmail.com">Email</a> or <a href="https://github.com/prakharmishra27">GitHub Profile</a></p>
 
         <p class="footer">© 2025 HACL Project - Go1 Quadrupedal Locomotion Research</p>
     </div>
